# checkers

./: .gitignore  AIPlayer.h  CMakeLists.txt  Doxyfile  LocalPlayer.cpp  Makefile  NetworkPlayer.cpp  NetworkPlayer.h  Piece.h  README.md  SingletonInstantiationException.cpp  UIRenderer.cpp  UIRenderer.h
dev/: cli1.cpp  cli2.cpp  srv1.cpp  srv2.cpp  srv3.cpp  ui-draft.txt
src/: AIPlayer.cpp  AIPlayer.h  Console.cpp  Console.h  ConsoleParsingErrorException.cpp  ConsoleParsingErrorException.h  GameController.cpp  GameController.h  KingPiece.cpp  KingPiece.h  LocalPlayer.cpp  LocalPlayer.h  MenPiece.cpp  MenPiece.h  NetworkConnection.cpp  NetworkConnection.h  NetworkPlayer.cpp  NetworkPlayer.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Savefile.cpp  Savefile.h  SingletonInstantiationException.cpp  SingletonInstantiationException.h  UIRenderer.cpp  UIRenderer.h  UIRendererCompatible.cpp  UIRendererCompatible.h  UIRendererUnicode.cpp  UIRendererUnicode.h  checkers-splash.txt  exceptions.cpp  exceptions.h  main.cpp
src/doc/: arguments.dox  assignment.dox  mainpage.dox
